// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assert rendering handles equal 1`] = `
"<bold><red>  <bold>● </><bold>assertions › equality › is equal</></>

      found: <green>true</>
     wanted: <red>false</>
    compare: ===

    The failure occurred here:

    </> <gray>  5 | </>    t<yellow>.</>ok(<cyan>false</><yellow>,</> <green>'is ok'</>)<yellow>;</></>
    </> <gray>  6 | </>    t<yellow>.</>notOk(<cyan>true</><yellow>,</> <green>'is notOk'</>)<yellow>;</></>
    </><red><bold>></></><gray>  7 | </>    t<yellow>.</>equal(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is equal'</>)<yellow>;</></>
    </> <gray>    | </>      <red><bold>^</></></>
    </> <gray>  8 | </>    t<yellow>.</>same(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is same'</>)<yellow>;</></>
    </> <gray>  9 | </>  })<yellow>;</></>
    </> <gray> 10 | </></>

      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:7:7)</>
      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:4:11)</>
      <dim>at Object.<anonymous> (</>assertions.test.js<dim>:3:1)</>
"
`;

exports[`assert rendering handles notOk 1`] = `
"<bold><red>  <bold>● </><bold>assertions › equality › is notOk</></>

    The failure occurred here:

    </> <gray> 4 | </>  await t<yellow>.</>test(<green>'equality'</><yellow>,</> async (t) <yellow>=></> {</>
    </> <gray> 5 | </>    t<yellow>.</>ok(<cyan>false</><yellow>,</> <green>'is ok'</>)<yellow>;</></>
    </><red><bold>></></><gray> 6 | </>    t<yellow>.</>notOk(<cyan>true</><yellow>,</> <green>'is notOk'</>)<yellow>;</></>
    </> <gray>   | </>      <red><bold>^</></></>
    </> <gray> 7 | </>    t<yellow>.</>equal(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is equal'</>)<yellow>;</></>
    </> <gray> 8 | </>    t<yellow>.</>same(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is same'</>)<yellow>;</></>
    </> <gray> 9 | </>  })<yellow>;</></>

      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:6:7)</>
      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:4:11)</>
      <dim>at Object.<anonymous> (</>assertions.test.js<dim>:3:1)</>
"
`;

exports[`assert rendering handles ok 1`] = `
"<bold><red>  <bold>● </><bold>assertions › equality › is ok</></>

    The failure occurred here:

    </> <gray> 3 | </>test(<green>'assertions'</><yellow>,</> async (t) <yellow>=></> {</>
    </> <gray> 4 | </>  await t<yellow>.</>test(<green>'equality'</><yellow>,</> async (t) <yellow>=></> {</>
    </><red><bold>></></><gray> 5 | </>    t<yellow>.</>ok(<cyan>false</><yellow>,</> <green>'is ok'</>)<yellow>;</></>
    </> <gray>   | </>      <red><bold>^</></></>
    </> <gray> 6 | </>    t<yellow>.</>notOk(<cyan>true</><yellow>,</> <green>'is notOk'</>)<yellow>;</></>
    </> <gray> 7 | </>    t<yellow>.</>equal(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is equal'</>)<yellow>;</></>
    </> <gray> 8 | </>    t<yellow>.</>same(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is same'</>)<yellow>;</></>

      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:5:7)</>
      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:4:11)</>
      <dim>at Object.<anonymous> (</>assertions.test.js<dim>:3:1)</>
"
`;

exports[`assert rendering handles same 1`] = `
"<bold><red>  <bold>● </><bold>assertions › equality › is same</></>

         <red>--- expected</>
         <green>+++ actual</>
         <yellow>@@ -1,1 +1,1 @@</>
         <red>-true</>
         <green>+false</>

    The failure occurred here:

    </> <gray>  6 | </>    t<yellow>.</>notOk(<cyan>true</><yellow>,</> <green>'is notOk'</>)<yellow>;</></>
    </> <gray>  7 | </>    t<yellow>.</>equal(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is equal'</>)<yellow>;</></>
    </><red><bold>></></><gray>  8 | </>    t<yellow>.</>same(<cyan>false</><yellow>,</> <cyan>true</><yellow>,</> <green>'is same'</>)<yellow>;</></>
    </> <gray>    | </>      <red><bold>^</></></>
    </> <gray>  9 | </>  })<yellow>;</></>
    </> <gray> 10 | </></>
    </> <gray> 11 | </>  await t<yellow>.</>test(<green>'errors'</><yellow>,</> async (t) <yellow>=></> {</>

      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:8:7)</>
      <dim>at Test.<anonymous> (</>assertions.test.js<dim>:4:11)</>
      <dim>at Object.<anonymous> (</>assertions.test.js<dim>:3:1)</>
"
`;
